--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
@@ -31,6 +30,11 @@
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <button id="theme-toggle" class="theme-toggle" title="Toggle Dark/Light Mode">
+                        <i class="fas fa-moon"></i>
+                    </button>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -40,14 +44,18 @@
         </div>
     </nav>
 
-    <!-- Home Section -->
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Hi, I'm Jude Anton Amancio</h1>
-                <p class="hero-subtitle">I'm a web developer</p>
+                <div id="hero-bio" class="editable-content">
+                    <h1 class="hero-title">Hi, I'm Jude Anton Amancio</h1>
+                    <p class="hero-subtitle">I'm a web developer</p>
+                </div>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View my work</a>
+                    <button class="edit-btn" onclick="toggleEdit('hero-bio')">
+                        <i class="fas fa-edit"></i> Edit
+                    </button>
                 </div>
             </div>
             <div class="hero-image">
@@ -56,21 +64,26 @@
         </div>
     </section>
 
-    <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">ABOUT ME</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I'm a dedicated developer with a passion for creating innovative solutions. With expertise in modern web technologies, I strive to build applications that not only meet technical requirements but also provide exceptional user experiences.</p>
-                    <p>My journey in technology has been driven by curiosity and a desire to solve complex problems. I believe in continuous learning and staying updated with the latest industry trends.</p>
-                    <p>I specialize in front-end development, creating responsive and user-friendly interfaces that deliver seamless user experiences across all devices.</p>
+                    <div class="edit-section">
+                        <button class="edit-btn" onclick="toggleEdit('about-text')">
+                            <i class="fas fa-edit"></i> Edit
+                        </button>
+                        <div id="about-text" class="editable-content">
+                            <p>I'm a dedicated developer with a passion for creating innovative solutions. With expertise in modern web technologies, I strive to build applications that not only meet technical requirements but also provide exceptional user experiences.</p>
+                            <p>My journey in technology has been driven by curiosity and a desire to solve complex problems. I believe in continuous learning and staying updated with the latest industry trends.</p>
+                            <p>I specialize in front-end development, creating responsive and user-friendly interfaces that deliver seamless user experiences across all devices.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">My Skills</h2>
@@ -139,7 +152,6 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
             <h2 class="section-title">My Projects</h2>
@@ -177,7 +189,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
@@ -234,64 +245,12 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 My Portfolio. All rights reserved.</p>
         </div>
     </footer>
 
-    <script>
-        // Mobile menu toggle
-        const hamburger = document.querySelector('.hamburger');
-        const navMenu = document.querySelector('.nav-menu');
-
-        hamburger.addEventListener('click', () => {
-            hamburger.classList.toggle('active');
-            navMenu.classList.toggle('active');
-        });
-
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-
-        // Close mobile menu when clicking on a link
-        document.querySelectorAll('.nav-link').forEach(n => n.addEventListener('click', () => {
-            hamburger.classList.remove('active');
-            navMenu.classList.remove('active');
-        }));
-
-        // Animate skill bars on scroll
-        const observerOptions = {
-            threshold: 0.5
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    const skillBars = entry.target.querySelectorAll('.skill-bar');
-                    skillBars.forEach(bar => {
-                        const level = bar.getAttribute('data-level');
-                        bar.style.width = level + '%';
-                    });
-                }
-            });
-        }, observerOptions);
-
-        const skillsSection = document.querySelector('.skills');
-        if (skillsSection) {
-            observer.observe(skillsSection);
-        }
-    </script>
+    <script src="script.js" defer></script>
 </body>
 </html>
